fix the other side of clipping

--- a/src/components/visualizers/MultiLineChart.scss
+++ b/src/components/visualizers/MultiLineChart.scss
@@ -13,10 +13,10 @@
 
   .area-path {
     // stroke: $color-ui-primary;
-    stroke-width: 1.5;
-    stroke-linecap: round;
-    stroke-opacity: 1;
-    
+    // stroke-width: 1.5;
+    // stroke-linecap: round;
+    // stroke-opacity: 1;
+
   }
   .axis {
     text {
